test/libyul/yulSyntaxTests/number_literal_3.yul
{ let x:u256 := 1e5:u256 }
// ----
// ParserError 4828: (16-19): Invalid number literal.
